Add node regeneration

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ workerTravelTime=100
 resourceCollectingTime=200
 targetNumberOfWorkers=12
 workerCapacity=8
+regenerationTime=15000
+regeneratedResources=100
