--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -7,3 +7,5 @@ workerTravelTime=${workerTravelTime}
 resourceCollectingTime=${resourceCollectingTime}
 targetNumberOfWorkers=${targetNumberOfWorkers}
 workerCapacity=${workerCapacity}
+regenerationTime=${regenerationTime}
+regeneratedResources=${regeneratedResources}
